fixed align right

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ html{
 body{
     font-family: 'Lato', sans-serif;
     padding: 10px;
+    margin: auto;
+
 }
 h2{
     letter-spacing: 3.2px;
@@ -20,6 +22,8 @@ p{
     border-bottom: 3px solid #bdc3c7 ;
     margin-top: 10px;
     padding-bottom: 15px;
+    text-align: right;
+
 }
 div{
     color:#3498db;
@@ -34,5 +38,8 @@ p:nth-of-type(3) {
 }
 h2:hover{
     letter-spacing: 15px;
+    text-align: center;
+}
+.middle{
     text-align: center;
 }
